parser.output
Nonterminals useless in grammar

    IF_CONDITION
    IF_ONLY
    IF_ELSE
    IF_HEADER
    IF_BODY
    REPEAT_UNTIL_LOOP
    REPEAT_BODY
    UNTIL_STATEMENT
    WHILE_LOOP
    WHILE_HEADER
    WHILE_BODY
    FOR_LOOP
    FOR_HEADER
    FOR_BODY
    ITERATOR_DECLARATION
    SWITCH_CASE
    SWITCH_HEADER
    SWITCH_BODY
    CASE_LIST
    CASE_ELEMENT
    DEFAULT_ELEMENT
    VALUE
    ARGUMENT_LIST_NONEMPTY
    EXPRESSION
    LOGICAL_EXPRESSION
    LOGICAL_EXPRESSION_TAIL
    LOGICAL_EXPRESSION_FACTOR
    LOGICAL_EXPRESSION_FACTOR_TAIL
    LOGICAL_EXPRESSION_TERM
    ARITHMETIC_EXPRESSION_TERM
    ARITHMETIC_EXPRESSION_FACTOR
    ARITHMETIC_EXPRESSION_UNARY
    PRIMARY_EXPRESSION


Terminals unused in grammar

    IF
    ELSE
    WHILE
    REPEAT
    UNTIL
    FOR
    SWITCH
    CASE
    CONST
    DEFAULT
    OR
    AND
    NOT
    GT
    GE
    ST
    SE
    EQ
    NEQ
    PLUS
    MINUS
    MULTIPLY
    DIVIDE
    MODULO
    POWER
    EQUAL
    COLON
    INTVALUE
    BOOLVALUE
    FLOATVALUE
    CHARVALUE
    STRINGVALUE
    UNKNOWN


Rules useless in grammar

   25 statement: IF_CONDITION
   26          | WHILE_LOOP
   27          | REPEAT_UNTIL_LOOP
   28          | FOR_LOOP
   29          | SWITCH_CASE
   30          | EXPRESSION SEMI_COLON

   31 DECLARATION: DATATYPE IDENTIFIER EQUAL EXPRESSION
   32            | CONST DATATYPE IDENTIFIER COLON EXPRESSION

   33 ASSIGNMENT: IDENTIFIER EQUAL EXPRESSION

   34 IF_CONDITION: IF_ONLY
   35             | IF_ELSE

   36 IF_ONLY: IF_HEADER IF_BODY
   37        | IF_HEADER SEMI_COLON

   38 IF_ELSE: IF_HEADER IF_BODY ELSE IF_BODY
   39        | IF_HEADER IF_BODY ELSE SEMI_COLON

   40 IF_HEADER: IF LEFT_ROUND_BRACKET EXPRESSION RIGHT_ROUND_BRACKET

   41 IF_BODY: SCOPE_OF_STATEMENTS
   42        | statement

   43 REPEAT_UNTIL_LOOP: REPEAT REPEAT_BODY UNTIL_STATEMENT SEMI_COLON

   44 REPEAT_BODY: SCOPE_OF_STATEMENTS
   45            | statement

   46 UNTIL_STATEMENT: UNTIL LEFT_ROUND_BRACKET EXPRESSION RIGHT_ROUND_BRACKET

   47 WHILE_LOOP: WHILE_HEADER WHILE_BODY
   48           | WHILE_HEADER SEMI_COLON

   49 WHILE_HEADER: WHILE LEFT_ROUND_BRACKET EXPRESSION RIGHT_ROUND_BRACKET

   50 WHILE_BODY: SCOPE_OF_STATEMENTS
   51           | statement

   52 FOR_LOOP: FOR_HEADER FOR_BODY
   53         | FOR_HEADER SEMI_COLON

   54 FOR_HEADER: FOR LEFT_ROUND_BRACKET ITERATOR_DECLARATION SEMI_COLON EXPRESSION SEMI_COLON EXPRESSION RIGHT_ROUND_BRACKET

   55 FOR_BODY: SCOPE_OF_STATEMENTS
   56         | statement

   57 ITERATOR_DECLARATION: DATATYPE IDENTIFIER EQUAL EXPRESSION
   58                     | IDENTIFIER EQUAL EXPRESSION
   59                     | IDENTIFIER

   60 SWITCH_CASE: SWITCH_HEADER SWITCH_BODY

   61 SWITCH_HEADER: SWITCH LEFT_ROUND_BRACKET EXPRESSION RIGHT_ROUND_BRACKET

   62 SWITCH_BODY: LEFT_CURLY_BRACKET CASE_LIST RIGHT_CURLY_BRACKET

   63 CASE_LIST: ε
   64          | CASE_LIST CASE_ELEMENT
   65          | CASE_LIST DEFAULT_ELEMENT

   66 CASE_ELEMENT: CASE VALUE COLON SCOPE_OF_STATEMENTS

   67 DEFAULT_ELEMENT: DEFAULT COLON SCOPE_OF_STATEMENTS

   68 VALUE: INTVALUE
   69      | CHARVALUE
   70      | BOOLVALUE

   71 ARGUMENT_LIST: ARGUMENT_LIST_NONEMPTY

   72 ARGUMENT_LIST_NONEMPTY: EXPRESSION
   73                       | ARGUMENT_LIST_NONEMPTY COMMA EXPRESSION

   74 EXPRESSION: LOGICAL_EXPRESSION

   75 LOGICAL_EXPRESSION: LOGICAL_EXPRESSION OR LOGICAL_EXPRESSION_TAIL
   76                   | LOGICAL_EXPRESSION_TAIL

   77 LOGICAL_EXPRESSION_TAIL: LOGICAL_EXPRESSION_TAIL AND LOGICAL_EXPRESSION_FACTOR
   78                        | LOGICAL_EXPRESSION_FACTOR

   79 LOGICAL_EXPRESSION_FACTOR: LOGICAL_EXPRESSION_FACTOR EQ LOGICAL_EXPRESSION_FACTOR_TAIL
   80                          | LOGICAL_EXPRESSION_FACTOR NEQ LOGICAL_EXPRESSION_FACTOR_TAIL
   81                          | LOGICAL_EXPRESSION_FACTOR_TAIL

   82 LOGICAL_EXPRESSION_FACTOR_TAIL: LOGICAL_EXPRESSION_FACTOR_TAIL GT LOGICAL_EXPRESSION_TERM
   83                               | LOGICAL_EXPRESSION_FACTOR_TAIL GE LOGICAL_EXPRESSION_TERM
   84                               | LOGICAL_EXPRESSION_FACTOR_TAIL ST LOGICAL_EXPRESSION_TERM
   85                               | LOGICAL_EXPRESSION_FACTOR_TAIL SE LOGICAL_EXPRESSION_TERM

   86 LOGICAL_EXPRESSION_TERM: LOGICAL_EXPRESSION_TERM PLUS ARITHMETIC_EXPRESSION_TERM
   87                        | LOGICAL_EXPRESSION_TERM MINUS ARITHMETIC_EXPRESSION_TERM
   88                        | ARITHMETIC_EXPRESSION_TERM

   89 ARITHMETIC_EXPRESSION_TERM: ARITHMETIC_EXPRESSION_TERM MULTIPLY ARITHMETIC_EXPRESSION_FACTOR
   90                           | ARITHMETIC_EXPRESSION_TERM DIVIDE ARITHMETIC_EXPRESSION_FACTOR
   91                           | ARITHMETIC_EXPRESSION_TERM MODULO ARITHMETIC_EXPRESSION_FACTOR
   92                           | ARITHMETIC_EXPRESSION_FACTOR

   93 ARITHMETIC_EXPRESSION_FACTOR: ARITHMETIC_EXPRESSION_UNARY POWER ARITHMETIC_EXPRESSION_FACTOR
   94                             | ARITHMETIC_EXPRESSION_UNARY

   95 ARITHMETIC_EXPRESSION_UNARY: MINUS ARITHMETIC_EXPRESSION_UNARY
   96                            | NOT ARITHMETIC_EXPRESSION_UNARY
   97                            | PRIMARY_EXPRESSION

   98 PRIMARY_EXPRESSION: LEFT_ROUND_BRACKET EXPRESSION RIGHT_ROUND_BRACKET
   99                   | INTVALUE
  100                   | FLOATVALUE
  101                   | CHARVALUE
  102                   | STRINGVALUE
  103                   | BOOLVALUE
  104                   | IDENTIFIER
  105                   | FUNCTION_CALL


Grammar

    0 $accept: program $end

    1 program: statements

    2 statements: ε
    3           | statements statement

    4 statement: DECLARATION SEMI_COLON
    5          | ASSIGNMENT SEMI_COLON
    6          | CONTINUE SEMI_COLON
    7          | BREAK SEMI_COLON
    8          | FUNCTION_DEFINITION_IMPLEMENTATION
    9          | FUNCTION_CALL SEMI_COLON
   10          | RETURN SEMI_COLON
   11          | SCOPE_OF_STATEMENTS

   12 DECLARATION: DATATYPE IDENTIFIER

   13 ASSIGNMENT: IDENTIFIER INCREMENT
   14           | IDENTIFIER DECREMENT
   15           | INCREMENT IDENTIFIER
   16           | DECREMENT IDENTIFIER

   17 FUNCTION_DEFINITION_IMPLEMENTATION: FUNCTION DATATYPE IDENTIFIER LEFT_ROUND_BRACKET PARAMETER_LIST RIGHT_ROUND_BRACKET SCOPE_OF_STATEMENTS

   18 PARAMETER_LIST: ε
   19               | PARAM_LIST_NONEMPTY

   20 PARAM_LIST_NONEMPTY: DATATYPE IDENTIFIER
   21                    | PARAM_LIST_NONEMPTY COMMA DATATYPE IDENTIFIER

   22 FUNCTION_CALL: IDENTIFIER LEFT_ROUND_BRACKET ARGUMENT_LIST RIGHT_ROUND_BRACKET

   23 ARGUMENT_LIST: ε

   24 SCOPE_OF_STATEMENTS: LEFT_CURLY_BRACKET statements RIGHT_CURLY_BRACKET


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IF (258)
    ELSE (259)
    WHILE (260)
    REPEAT (261)
    UNTIL (262)
    FOR (263)
    SWITCH (264)
    CASE (265)
    CONST (266)
    RETURN (267) 10
    CONTINUE (268) 6
    BREAK (269) 7
    FUNCTION (270) 17
    DEFAULT (271)
    OR (272)
    AND (273)
    NOT (274)
    GT (275)
    GE (276)
    ST (277)
    SE (278)
    EQ (279)
    NEQ (280)
    PLUS (281)
    MINUS (282)
    MULTIPLY (283)
    DIVIDE (284)
    MODULO (285)
    POWER (286)
    INCREMENT (287) 13 15
    DECREMENT (288) 14 16
    EQUAL (289)
    SEMI_COLON (290) 4 5 6 7 9 10
    COMMA (291) 21
    COLON (292)
    LEFT_ROUND_BRACKET (293) 17 22
    RIGHT_ROUND_BRACKET (294) 17 22
    LEFT_CURLY_BRACKET (295) 24
    RIGHT_CURLY_BRACKET (296) 24
    INTVALUE <intData> (297)
    BOOLVALUE <intData> (298)
    FLOATVALUE <floatData> (299)
    CHARVALUE <charData> (300)
    STRINGVALUE <stringData> (301)
    IDENTIFIER <stringData> (302) 12 13 14 15 16 17 20 21 22
    DATATYPE <stringData> (303) 12 17 20 21
    UNKNOWN (304)


Nonterminals, with rules where they appear

    $accept (50)
        on left: 0
    program (51)
        on left: 1
        on right: 0
    statements <VOID_DATA> (52)
        on left: 2 3
        on right: 1 3 24
    statement <VOID_DATA> (53)
        on left: 4 5 6 7 8 9 10 11
        on right: 3
    DECLARATION <VOID_DATA> (54)
        on left: 12
        on right: 4
    ASSIGNMENT <VOID_DATA> (55)
        on left: 13 14 15 16
        on right: 5
    FUNCTION_DEFINITION_IMPLEMENTATION <VOID_DATA> (56)
        on left: 17
        on right: 8
    PARAMETER_LIST <VOID_DATA> (57)
        on left: 18 19
        on right: 17
    PARAM_LIST_NONEMPTY <VOID_DATA> (58)
        on left: 20 21
        on right: 19 21
    FUNCTION_CALL <VOID_DATA> (59)
        on left: 22
        on right: 9
    ARGUMENT_LIST <VOID_DATA> (60)
        on left: 23
        on right: 22
    SCOPE_OF_STATEMENTS <VOID_DATA> (61)
        on left: 24
        on right: 11 17


State 0

    0 $accept: • program $end

    $default  reduce using rule 2 (statements)

    program     go to state 1
    statements  go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: statements •
    3 statements: statements • statement

    RETURN              shift, and go to state 4
    CONTINUE            shift, and go to state 5
    BREAK               shift, and go to state 6
    FUNCTION            shift, and go to state 7
    INCREMENT           shift, and go to state 8
    DECREMENT           shift, and go to state 9
    LEFT_CURLY_BRACKET  shift, and go to state 10
    IDENTIFIER          shift, and go to state 11
    DATATYPE            shift, and go to state 12

    $default  reduce using rule 1 (program)

    statement                           go to state 13
    DECLARATION                         go to state 14
    ASSIGNMENT                          go to state 15
    FUNCTION_DEFINITION_IMPLEMENTATION  go to state 16
    FUNCTION_CALL                       go to state 17
    SCOPE_OF_STATEMENTS                 go to state 18


State 3

    0 $accept: program $end •

    $default  accept


State 4

   10 statement: RETURN • SEMI_COLON

    SEMI_COLON  shift, and go to state 19


State 5

    6 statement: CONTINUE • SEMI_COLON

    SEMI_COLON  shift, and go to state 20


State 6

    7 statement: BREAK • SEMI_COLON

    SEMI_COLON  shift, and go to state 21


State 7

   17 FUNCTION_DEFINITION_IMPLEMENTATION: FUNCTION • DATATYPE IDENTIFIER LEFT_ROUND_BRACKET PARAMETER_LIST RIGHT_ROUND_BRACKET SCOPE_OF_STATEMENTS

    DATATYPE  shift, and go to state 22


State 8

   15 ASSIGNMENT: INCREMENT • IDENTIFIER

    IDENTIFIER  shift, and go to state 23


State 9

   16 ASSIGNMENT: DECREMENT • IDENTIFIER

    IDENTIFIER  shift, and go to state 24


State 10

   24 SCOPE_OF_STATEMENTS: LEFT_CURLY_BRACKET • statements RIGHT_CURLY_BRACKET

    $default  reduce using rule 2 (statements)

    statements  go to state 25


State 11

   13 ASSIGNMENT: IDENTIFIER • INCREMENT
   14           | IDENTIFIER • DECREMENT
   22 FUNCTION_CALL: IDENTIFIER • LEFT_ROUND_BRACKET ARGUMENT_LIST RIGHT_ROUND_BRACKET

    INCREMENT           shift, and go to state 26
    DECREMENT           shift, and go to state 27
    LEFT_ROUND_BRACKET  shift, and go to state 28


State 12

   12 DECLARATION: DATATYPE • IDENTIFIER

    IDENTIFIER  shift, and go to state 29


State 13

    3 statements: statements statement •

    $default  reduce using rule 3 (statements)


State 14

    4 statement: DECLARATION • SEMI_COLON

    SEMI_COLON  shift, and go to state 30


State 15

    5 statement: ASSIGNMENT • SEMI_COLON

    SEMI_COLON  shift, and go to state 31


State 16

    8 statement: FUNCTION_DEFINITION_IMPLEMENTATION •

    $default  reduce using rule 8 (statement)


State 17

    9 statement: FUNCTION_CALL • SEMI_COLON

    SEMI_COLON  shift, and go to state 32


State 18

   11 statement: SCOPE_OF_STATEMENTS •

    $default  reduce using rule 11 (statement)


State 19

   10 statement: RETURN SEMI_COLON •

    $default  reduce using rule 10 (statement)


State 20

    6 statement: CONTINUE SEMI_COLON •

    $default  reduce using rule 6 (statement)


State 21

    7 statement: BREAK SEMI_COLON •

    $default  reduce using rule 7 (statement)


State 22

   17 FUNCTION_DEFINITION_IMPLEMENTATION: FUNCTION DATATYPE • IDENTIFIER LEFT_ROUND_BRACKET PARAMETER_LIST RIGHT_ROUND_BRACKET SCOPE_OF_STATEMENTS

    IDENTIFIER  shift, and go to state 33


State 23

   15 ASSIGNMENT: INCREMENT IDENTIFIER •

    $default  reduce using rule 15 (ASSIGNMENT)


State 24

   16 ASSIGNMENT: DECREMENT IDENTIFIER •

    $default  reduce using rule 16 (ASSIGNMENT)


State 25

    3 statements: statements • statement
   24 SCOPE_OF_STATEMENTS: LEFT_CURLY_BRACKET statements • RIGHT_CURLY_BRACKET

    RETURN               shift, and go to state 4
    CONTINUE             shift, and go to state 5
    BREAK                shift, and go to state 6
    FUNCTION             shift, and go to state 7
    INCREMENT            shift, and go to state 8
    DECREMENT            shift, and go to state 9
    LEFT_CURLY_BRACKET   shift, and go to state 10
    RIGHT_CURLY_BRACKET  shift, and go to state 34
    IDENTIFIER           shift, and go to state 11
    DATATYPE             shift, and go to state 12

    statement                           go to state 13
    DECLARATION                         go to state 14
    ASSIGNMENT                          go to state 15
    FUNCTION_DEFINITION_IMPLEMENTATION  go to state 16
    FUNCTION_CALL                       go to state 17
    SCOPE_OF_STATEMENTS                 go to state 18


State 26

   13 ASSIGNMENT: IDENTIFIER INCREMENT •

    $default  reduce using rule 13 (ASSIGNMENT)


State 27

   14 ASSIGNMENT: IDENTIFIER DECREMENT •

    $default  reduce using rule 14 (ASSIGNMENT)


State 28

   22 FUNCTION_CALL: IDENTIFIER LEFT_ROUND_BRACKET • ARGUMENT_LIST RIGHT_ROUND_BRACKET

    $default  reduce using rule 23 (ARGUMENT_LIST)

    ARGUMENT_LIST  go to state 35


State 29

   12 DECLARATION: DATATYPE IDENTIFIER •

    $default  reduce using rule 12 (DECLARATION)


State 30

    4 statement: DECLARATION SEMI_COLON •

    $default  reduce using rule 4 (statement)


State 31

    5 statement: ASSIGNMENT SEMI_COLON •

    $default  reduce using rule 5 (statement)


State 32

    9 statement: FUNCTION_CALL SEMI_COLON •

    $default  reduce using rule 9 (statement)


State 33

   17 FUNCTION_DEFINITION_IMPLEMENTATION: FUNCTION DATATYPE IDENTIFIER • LEFT_ROUND_BRACKET PARAMETER_LIST RIGHT_ROUND_BRACKET SCOPE_OF_STATEMENTS

    LEFT_ROUND_BRACKET  shift, and go to state 36


State 34

   24 SCOPE_OF_STATEMENTS: LEFT_CURLY_BRACKET statements RIGHT_CURLY_BRACKET •

    $default  reduce using rule 24 (SCOPE_OF_STATEMENTS)


State 35

   22 FUNCTION_CALL: IDENTIFIER LEFT_ROUND_BRACKET ARGUMENT_LIST • RIGHT_ROUND_BRACKET

    RIGHT_ROUND_BRACKET  shift, and go to state 37


State 36

   17 FUNCTION_DEFINITION_IMPLEMENTATION: FUNCTION DATATYPE IDENTIFIER LEFT_ROUND_BRACKET • PARAMETER_LIST RIGHT_ROUND_BRACKET SCOPE_OF_STATEMENTS

    DATATYPE  shift, and go to state 38

    $default  reduce using rule 18 (PARAMETER_LIST)

    PARAMETER_LIST       go to state 39
    PARAM_LIST_NONEMPTY  go to state 40


State 37

   22 FUNCTION_CALL: IDENTIFIER LEFT_ROUND_BRACKET ARGUMENT_LIST RIGHT_ROUND_BRACKET •

    $default  reduce using rule 22 (FUNCTION_CALL)


State 38

   20 PARAM_LIST_NONEMPTY: DATATYPE • IDENTIFIER

    IDENTIFIER  shift, and go to state 41


State 39

   17 FUNCTION_DEFINITION_IMPLEMENTATION: FUNCTION DATATYPE IDENTIFIER LEFT_ROUND_BRACKET PARAMETER_LIST • RIGHT_ROUND_BRACKET SCOPE_OF_STATEMENTS

    RIGHT_ROUND_BRACKET  shift, and go to state 42


State 40

   19 PARAMETER_LIST: PARAM_LIST_NONEMPTY •
   21 PARAM_LIST_NONEMPTY: PARAM_LIST_NONEMPTY • COMMA DATATYPE IDENTIFIER

    COMMA  shift, and go to state 43

    $default  reduce using rule 19 (PARAMETER_LIST)


State 41

   20 PARAM_LIST_NONEMPTY: DATATYPE IDENTIFIER •

    $default  reduce using rule 20 (PARAM_LIST_NONEMPTY)


State 42

   17 FUNCTION_DEFINITION_IMPLEMENTATION: FUNCTION DATATYPE IDENTIFIER LEFT_ROUND_BRACKET PARAMETER_LIST RIGHT_ROUND_BRACKET • SCOPE_OF_STATEMENTS

    LEFT_CURLY_BRACKET  shift, and go to state 10

    SCOPE_OF_STATEMENTS  go to state 44


State 43

   21 PARAM_LIST_NONEMPTY: PARAM_LIST_NONEMPTY COMMA • DATATYPE IDENTIFIER

    DATATYPE  shift, and go to state 45


State 44

   17 FUNCTION_DEFINITION_IMPLEMENTATION: FUNCTION DATATYPE IDENTIFIER LEFT_ROUND_BRACKET PARAMETER_LIST RIGHT_ROUND_BRACKET SCOPE_OF_STATEMENTS •

    $default  reduce using rule 17 (FUNCTION_DEFINITION_IMPLEMENTATION)


State 45

   21 PARAM_LIST_NONEMPTY: PARAM_LIST_NONEMPTY COMMA DATATYPE • IDENTIFIER

    IDENTIFIER  shift, and go to state 46


State 46

   21 PARAM_LIST_NONEMPTY: PARAM_LIST_NONEMPTY COMMA DATATYPE IDENTIFIER •

    $default  reduce using rule 21 (PARAM_LIST_NONEMPTY)
